--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
+    "@types/classnames": "^2.2.6",
     "@types/mathjs": "^4.4.1",
+    "classnames": "^2.2.6",
     "immutable-class": "^0.7.0",
     "mathjs": "^5.0.4",
     "node-sass-chokidar": "^1.3.3",
