--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oud",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lorem--ipsum.github.io/oud",
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
@@ -20,17 +21,20 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "node-sass-chokidar": "^1.3.3",
-    "npm-run-all": "^4.1.3",
     "@types/classnames": "^2.2.6",
-    "@types/mathjs": "^4.4.1",
     "@types/jest": "^23.3.1",
+    "@types/mathjs": "^4.4.1",
     "@types/node": "^10.5.3",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "gh-pages": "^1.2.0",
+    "node-sass-chokidar": "^1.3.3",
+    "npm-run-all": "^4.1.3",
     "typescript": "^2.9.2"
   }
 }
