--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mathjs": "^5.0.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0"
+    "react-scripts-ts": "2.16.0",
+    "regl": "^1.3.7"
   },
   "scripts": {
     "start-js": "react-scripts-ts start",
