--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "private": true,
   "homepage": "http://lorem--ipsum.github.io/oud",
   "dependencies": {
-    "@material-ui/core": "^1.4.1",
-    "@material-ui/icons": "^2.0.0",
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
-    "immutable-class": "^0.7.0",
-    "mathjs": "^5.0.4",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0",
-    "regl": "^1.3.7"
+    "immutable-class": "^0.9.8",
+    "mathjs": "^6.6.4",
+    "moize": "^5.4.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts-ts": "3.1.0",
+    "regl": "^1.4.2",
+    "three": "^0.115.0",
+    "uuid": "^7.0.3"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "printWidth": 100,
+    "endOfLine": "lf"
   },
   "scripts": {
     "start-js": "react-scripts-ts start",
@@ -27,15 +38,17 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.6",
-    "@types/jest": "^23.3.1",
-    "@types/mathjs": "^4.4.1",
-    "@types/node": "^10.5.3",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "gh-pages": "^1.2.0",
-    "node-sass-chokidar": "^1.3.3",
-    "npm-run-all": "^4.1.3",
-    "typescript": "^2.9.2"
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^25.2.1",
+    "@types/mathjs": "^6.0.5",
+    "@types/node": "^13.13.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/uuid": "^7.0.2",
+    "awesome-code-style": "^1.4.3",
+    "gh-pages": "^2.2.0",
+    "node-sass-chokidar": "^1.4.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^3.8.3"
   }
 }
