--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "autoprefixer": "7.1.6",
     "classnames": "^2.2.6",
     "immutable-class": "^0.9.8",
     "mathjs": "^6.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts-ts": "3.1.0",
     "three": "^0.115.0"
   },
   "prettier": {
@@ -23,14 +23,13 @@
     "endOfLine": "lf"
   },
   "scripts": {
-    "start-js": "react-scripts-ts start",
-    "build-js": "react-scripts-ts build",
+    "start-js": "node scripts/start.js",
+    "build-js": "node scripts/build.js",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject",
+    "test": "node scripts/test.js --env=jsdom",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -41,21 +40,21 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@types/uuid": "^7.0.2",
+    "@webpack-cli/serve": "^0.2.0",
     "awesome-code-style": "^1.4.3",
-    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
     "gh-pages": "^2.2.0",
+    "html-webpack-plugin": "^4.2.0",
     "node-sass": "^4.14.0",
     "node-sass-chokidar": "^1.4.0",
-    "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
-    "webpack": "^5.0.0-beta.13",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
